[workspace]
members = [
	"aesm-client",
	"dcap-provider",
	"dcap-ql-sys",
	"dcap-ql",
	"enclave-runner",
	"fortanix-sgx-abi",
	"fortanix-sgx-tools",
	"report-test",
	"rs-libc",
	"sgxs",
	"sgx-isa",
	"sgxs-loaders",
	"sgxs-tools"
]
exclude = ["examples"]

[patch.crates-io]
futures-await = {git = 'https://github.com/vorot93/futures-await', branch='master'}